# fair-charging-station-data

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  clean.py  download.py  evaluate.py  fless.py  main.py  metadata.yaml  pyproject.toml  requirements.txt
fair/: README.md  normalise.py  requirements.txt
parser/: annotate.py  clean.py  evaluate.py  load.py  normalise.py  publish.py  rename.py
src/: annotate.py  clean.py  download.py  evaluate.py  load.py  normalise.py  publish.py  rename.py
src/fair/: annotate.py  clean.py  evaluate.py
