[project]
name = "bnetza-parser"
version = "0.1.0"
description = "BNEtzA data parser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frictionless>=5.18.1",
    "jsonschema-rs>=0.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parser"]

[tool.hatch.metadata]
allow-direct-references = true
